# mipt-rust

./: .deadlines.yml  .gitignore  Cargo.toml  README.md
docs/: additional-setup.md  reading-list.md  setup.md  solving.md  syllabus.md
lectures/: README.md
lectures/lecture-01/: slides.tex
lectures/lecture-03/: slides.tex
lectures/lecture-04/: slides.tex
problems/async/babencoin/: .config.yml  README.md
problems/async/babencoin/tests/: mining_service.rs
problems/async/crawler/src/: lib.rs
problems/async/crawler/tests/: tests.rs
problems/borrowing/bst/: Cargo.toml  README.md
problems/borrowing/bst/tests/: tests.rs
problems/borrowing/context/: README.md
problems/borrowing/context/src/: lib.rs
problems/borrowing/pstack/src/: lib.rs
problems/borrowing/pstack/tests/: tests.rs
problems/intro/combinations/: Cargo.toml  README.md
problems/intro/combinations/src/: lib.rs
problems/intro/conway/: Cargo.toml  README.md
problems/intro/min-queue/: Cargo.toml  README.md
problems/line_adjustment/: ReadMe.txt
problems/line_adjustment/src/: lib.rs
problems/macros-2/orm/: README.md
problems/macros/mini-frunk/: .config.yml  README.md
problems/modules/ripgzip/: README.md
problems/modules/trie/: README.md
problems/std-collections/comm/: README.md
problems/std-collections/lru-cache/: README.md
problems/std-collections/prefix/: README.md
problems/traits/flatmap/: README.md
problems/traits/itertools/: README.md
problems/tutorial/add/: README.md
problems/unsafe/snapshot/: README.md
tools/rover/: README.md
tools/rover/src/: main.rs
(+62 files in other folders)
