[workspace]
members = [
    "problems/tutorial/add",
    "problems/intro/combinations",
    "problems/intro/min-queue",
    "problems/intro/conway",
    "problems/std-collections/comm",
    "problems/std-collections/mpsc",
    "problems/std-collections/prefix",
    "problems/std-collections/lru-cache",
]
